--- a/Project.toml
+++ b/Project.toml
@@ -2,5 +2,8 @@
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 Meshing = "e6723b4c-ebff-59f1-b4b7-d97aa5274f73"
+ParametricBodies = "06905c2e-4b4a-4765-8bb9-c6b6b2b99b1d"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 WaterLily = "ed894a53-35f9-47f1-b17f-85db9237eebd"
+WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
